Closed
Bug 1361787
Opened 8 years ago
Closed 8 years ago
Printing hang with box-shadow on windows 10
Categories
(Core :: Printing: Output, defect)
Tracking
()
VERIFIED
FIXED
mozilla55
People
(Reporter: blgleverd, Assigned: mchang)
References
(Depends on 1 open bug, Blocks 1 open bug, )
Details
(Keywords: hang, regression, reproducible)
Attachments
(2 files)
274 bytes,
text/html
|
Details | |
1.56 KB,
patch
|
lsalzman
:
review+
gchang
:
approval-mozilla-beta+
ritu
:
approval-mozilla-esr52-
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:53.0) Gecko/20100101 Firefox/53.0
Build ID: 20170413192749
Steps to reproduce:
Try to print page 1 of http://essentialseeing.com/phototrip/exclusive-namibia-namibrand-photo-workshop/
set fit to page if not set already
hit print
Actual results:
the progression bar goes to (apparently) 100% but stays there for ever
hitting cancel or closing the progression bar window : Firefox does not respond and has to be killed.
In another test , I noticed in the windows spool list that the document size was more than 2 GB for 2 pages.
Printing from internet explorer is OK, from other applications is OK, but printing from Thunderbird 52 gives similar problem to Firefox
Component: Untriaged → Printing: Output
Product: Firefox → Core
![]() |
||
Comment 1•8 years ago
|
||
I can reproduce the issue on Windows10, but not on Ubuntu16.04.
And this seems not to be a recent regression.
![]() |
||
Updated•8 years ago
|
status-firefox53:
--- → wontfix
status-firefox54:
--- → affected
status-firefox55:
--- → affected
status-firefox-esr45:
--- → wontfix
status-firefox-esr52:
--- → affected
status-thunderbird_esr45:
--- → wontfix
status-thunderbird_esr52:
--- → affected
![]() |
||
Comment 2•8 years ago
|
||
regression-window |
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=cbe9a2aea954&tochange=5ddf0a252b08
Regressed by:
69aca2db34d Mason Chang — Bug 1162824 - Change box shadow cache to cache the colored blurred box shadow. r=mstange
28bbd1fb7ed1 Mason Chang — Bug 1155828 - Draw box-shadows using an approach inspired by border-image. r=mstange
And *{box-shadow:none !important;} fixes the hang.
@:mchang,
Your bunch of patches causes the print hang. Please look this.
Has Regression Range: --- → yes
Has STR: --- → yes
Flags: needinfo?(mchang)
Keywords: regression,
reproducible
Version: 53 Branch → 41 Branch
![]() |
||
Comment 3•8 years ago
|
||
Firefox53 32 bit hangs when print with "Microsoft print to PDF" on Windows10 64bit.
![]() |
||
Updated•8 years ago
|
Severity: normal → critical
Summary: Printing problem with Firefox since release 52 & 53 windows 10 → Printing hang with box-shadow on windows 10
![]() |
Assignee | |
Comment 4•8 years ago
|
||
(In reply to Alice0775 White from comment #3)
> Created attachment 8864334 [details]
> possible minimum html
>
> Firefox53 32 bit hangs when print with "Microsoft print to PDF" on Windows10
> 64bit.
This prints fine for me but the original page doesn't.
Flags: needinfo?(mchang)
![]() |
Assignee | |
Updated•8 years ago
|
Assignee: nobody → mchang
![]() |
Assignee | |
Comment 5•8 years ago
|
||
(In reply to Mason Chang [:mchang] from comment #4)
> (In reply to Alice0775 White from comment #3)
> > Created attachment 8864334 [details]
> > possible minimum html
> >
> > Firefox53 32 bit hangs when print with "Microsoft print to PDF" on Windows10
> > 64bit.
>
> This prints fine for me but the original page doesn't.
This is odd. If I change the values of the box shadow to any other value, the page prints fine. Also, this test page crashes for me now.
![]() |
Assignee | |
Comment 6•8 years ago
|
||
Can you try this build when it's done?
https://archive.mozilla.org/pub/firefox/try-builds/mchang@mozilla.com-379e2cb9259bcfa95588419ec62fd9255e7b9efc/
Flags: needinfo?(alice0775)
![]() |
||
Comment 7•8 years ago
|
||
(In reply to Mason Chang [:mchang] from comment #6)
> Can you try this build when it's done?
>
> https://archive.mozilla.org/pub/firefox/try-builds/mchang@mozilla.com-
> 379e2cb9259bcfa95588419ec62fd9255e7b9efc/
The try builds(try-win32-debug,try-win64-debug,try-win64) fixes the hang, I cannot reproduce the hang any more. And I can confirm that print result is fine (tested with URL page and possible minimum html)
(Of course, I can still reproduce the hang on latest Nightly55.0a1(2017-05-09) 32bit and 64bit.)
Flags: needinfo?(alice0775)
![]() |
Assignee | |
Comment 8•8 years ago
|
||
Attachment #8866387 -
Flags: review?(lsalzman)
![]() |
Assignee | |
Comment 9•8 years ago
|
||
Updated•8 years ago
|
Attachment #8866387 -
Flags: review?(lsalzman) → review+
Comment 10•8 years ago
|
||
Pushed by mchang@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/8569a2b1c1ee
Don't use the minimum box shadow when printing box shadows. r=lsalzman
Comment 11•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment 12•8 years ago
|
||
Sounds like this could use Beta & ESR52 approval requests.
Flags: needinfo?(mchang)
![]() |
Assignee | |
Comment 13•8 years ago
|
||
Comment on attachment 8866387 [details] [diff] [review]
Don't use min box shadow when printing
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1155828
[User impact if declined]: Printing can cause Firefox to crash
[Is this code covered by automated tests?]: Yes and no. Box shadows are but not printing.
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: See comment 0.
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: Maybe
[Why is the change risky/not risky?]: This isn't a big change, except we've had lots of long tail box shadow regressions before during Bug 1155828. We made reftests for those regressions when they came up, but I'm still wary.
[String changes made/needed]:
Attachment #8866387 -
Flags: approval-mozilla-beta?
![]() |
||
Comment 14•8 years ago
|
||
Comment on attachment 8866387 [details] [diff] [review]
Don't use min box shadow when printing
Fix a hang issue related to printing. Beta54+. Should be in 54 beta 8.
Attachment #8866387 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 15•8 years ago
|
||
bugherder uplift |
Updated•8 years ago
|
Flags: qe-verify+
Comment 16•8 years ago
|
||
Reproduced on 53.0.2.
Verified fixed Fx 54b8, 55.0a1 (2017-05-15) Win 10.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
![]() |
Assignee | |
Comment 17•8 years ago
|
||
If we don't have any new regressions from this by Friday, I guess we can ESR approval this.
![]() |
Assignee | |
Comment 18•8 years ago
|
||
Comment on attachment 8866387 [details] [diff] [review]
Don't use min box shadow when printing
See https://bugzilla.mozilla.org/show_bug.cgi?id=1361787#c13
Flags: needinfo?(mchang)
Attachment #8866387 -
Flags: approval-mozilla-esr52?
Comment on attachment 8866387 [details] [diff] [review]
Don't use min box shadow when printing
I looked at the comments and the user impact, I am not convinced this is a widespread enough problem for ESR users. The uplift bar for ESR is generally severe new regressions, security and stability issues. As such, this fix doesn't seem so critical to take the risk of unknown regressions that this might induce.
Attachment #8866387 -
Flags: approval-mozilla-esr52? → approval-mozilla-esr52-
Updated•8 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•