Bug 1361787 - Don't use the minimum box shadow when printing box shadows. r=lsalzman, a=gchang